--- a/diretoriadeprojetos/src/main/resources/application.properties
+++ b/diretoriadeprojetos/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.application.name=diretoriadeprojetos
-<<<<<<< HEAD
-=======
-spring.datasource.url=jdbc:mysql://localhost:3306/seu_banco?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Clara.952
+spring.datasource.url=jdbc:postgresql://localhost:5432/diretoriadeprojetos
+spring.datasource.username=postgres
+spring.datasource.password=Clara.951
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Garante a criação das tabelas
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
->>>>>>> 60a1e363cb50b294d94a8ee1281cfaf19402c824
+
+# Dialeto do PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
