--- a/diretoriadeprojetos/src/main/resources/application.properties
+++ b/diretoriadeprojetos/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Clara.951
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Garante a criação das tabelas
+# Garante a criaï¿½ï¿½o das tabelas
 spring.jpa.hibernate.ddl-auto=update
 
 # Dialeto do PostgreSQL
