--- a/diretoriadeprojetos/src/main/resources/application.properties
+++ b/diretoriadeprojetos/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Dialeto do PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.config.import=optional:classpath:secret.properties
