--- a/diretoriadeprojetos/pom.xml
+++ b/diretoriadeprojetos/pom.xml
@@ -63,6 +63,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		  </dependency>
+		  <dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.14.0</version> </dependency>
 	</dependencies>
 
 	<build>
