[fix] Corrigindo bugs

--- a/diretoriadeprojetos/src/main/resources/application.properties
+++ b/diretoriadeprojetos/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.config.import=optional:classpath:secret.properties
+
+
+spring.mvc.throw-exception-if-no-handler-found=true
+
+# Desativa o mapeamento padrão de recursos do Spring para garantir que ele use nossa exceção
+spring.web.resources.add-mappings=false
